@@ -1,5 +1,7 @@
 2006-07-20  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/etc/Makefile.am, src/libmunge/Makefile.am: Tweaked dir perms.
+
 	* src/munged/munged.c(main): Moved root privs test (if needed) to
 	  after parse_cmdline().
 
